[tool.poetry]
authors = ["harehare <harehare1110@gmail.com>"]
description = ""
name = "vdom-python"
packages = [{include = "vdom_anywhere_work"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.4.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
